# OitoNove17

./: .gitignore  README.md  main.py  pyproject.toml
classes/: atendimentos.py  base.py  clientes.py  servicos.py
src/: database.py  models.py
src/classes/: atendimentos.py  base.py  clientes.py  servicos.py
